@@ -2,6 +2,7 @@ package io.algafoodapi.domain.service;
 
 import io.algafoodapi.domain.exception.EntidadeEmUsoException;
 import io.algafoodapi.domain.exception.EntidadeNaoEncontradaException;
+import io.algafoodapi.domain.exception.RequisicaoMalFormuladaException;
 import io.algafoodapi.domain.model.Estado;
 import io.algafoodapi.domain.repository.EstadoRepository;
 import org.springframework.beans.BeanUtils;
@@ -10,10 +11,15 @@ import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
 
 @Service
-public final class EstadoService {
+public class EstadoService {
+
+    public static final String NÃO_ENCONTRADO_ESTADO_COM_ID = "Não encontrado estado com código %d.";
+    public static final String PROIBIDO_APAGAR_ESTADO_EM_USO_COM_ID = "Proibido apagar estado em uso. ID: %d.";
+    public static final String NAO_EXISTEM_ESTADOS_CADASTRADOS = "Não há estados cadastrados no banco de dados.";
 
     @Autowired
     private EstadoRepository estadoRepository;
@@ -22,10 +28,11 @@ public final class EstadoService {
         return this.estadoRepository.saveAndFlush(estado);
     }
 
-    public Estado atualizar(Long id, Estado estadoAtual) throws EntidadeNaoEncontradaException {
+    public Estado atualizar(Long id, Estado estadoAtual) {
 
         var estado = this.consultarPorId(id);
         BeanUtils.copyProperties(estadoAtual, estado, "id");
+
         return this.salvar(estado);
     }
 
@@ -35,26 +42,31 @@ public final class EstadoService {
             this.estadoRepository.deleteById(id);
 
         } catch (EmptyResultDataAccessException dataAccessException) {
-            throw new EntidadeNaoEncontradaException(String.format("Não encontrado estado com código %d.", id));
+            throw new EntidadeNaoEncontradaException(String.format(EstadoService.NÃO_ENCONTRADO_ESTADO_COM_ID, id));
 
         } catch (DataIntegrityViolationException violationException) {
-            throw new EntidadeEmUsoException(String.format("Não pode ser removido estado com código %d, pois está em uso.", id));
+            throw new RequisicaoMalFormuladaException(String.format(PROIBIDO_APAGAR_ESTADO_EM_USO_COM_ID, id));
         }
     }
 
     public Estado consultarPorId(Long id) {
+
         return this.estadoRepository.findById(id)
-                .orElseThrow(() -> new EntidadeNaoEncontradaException("""
-                    Não encontrado estado com código %d.""".formatted(id)));
+                .orElseThrow(() -> new EntidadeNaoEncontradaException(
+                        String.format(NÃO_ENCONTRADO_ESTADO_COM_ID, id)));
     }
 
-    public List<Estado> buscarTodos() {
-        var estados = this.estadoRepository.findAll();
+    public List<Estado> listar() {
+
+        var estados = this.estadoRepository.findAll()
+                .stream()
+                .sorted(Comparator.comparing(Estado::getId).reversed())
+                .toList();
 
         if(estados.isEmpty())
-            throw new EntidadeNaoEncontradaException("""
-                    Não há estados cadastrados no banco de dados.""");
+            throw new EntidadeNaoEncontradaException(String.format(NAO_EXISTEM_ESTADOS_CADASTRADOS));
 
         return estados;
     }
 }
+
